@@ -1,11 +1,15 @@
 package com.trendai.trendai.service;
 
 import com.trendai.trendai.dto.AddCartItemRequest;
+import com.trendai.trendai.dto.CartResponse;
+import com.trendai.trendai.dto.UpdateCartItemQuantityRequest;
 import com.trendai.trendai.entity.Cart;
 import com.trendai.trendai.entity.CartItem;
 import com.trendai.trendai.entity.CartStatus;
 import com.trendai.trendai.entity.Product;
 import com.trendai.trendai.entity.User;
+import com.trendai.trendai.exception.BusinessException;
+import com.trendai.trendai.exception.ResourceNotFoundException;
 import com.trendai.trendai.repository.CartItemRepository;
 import com.trendai.trendai.repository.CartRepository;
 import com.trendai.trendai.repository.ProductRepository;
@@ -16,19 +20,17 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import com.trendai.trendai.exception.BusinessException;
-import com.trendai.trendai.exception.ResourceNotFoundException;
-import com.trendai.trendai.dto.UpdateCartItemQuantityRequest;
-import com.trendai.trendai.dto.CartResponse;
 
 import java.math.BigDecimal;
+import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
-import static org.junit.jupiter.api.Assertions.assertThrows;
 
 @ExtendWith(MockitoExtension.class)
 class CartServiceTest {
@@ -71,14 +73,18 @@ class CartServiceTest {
         request.setProductId(20L);
         request.setQuantity(2);
 
-        when(cartRepository.findById(10L))
-                .thenReturn(Optional.of(cart));
+        when(cartRepository.findByUserIdAndStatus(
+                1L,
+                CartStatus.ACTIVE
+        )).thenReturn(Optional.of(cart));
 
         when(productRepository.findByIdAndActiveTrue(20L))
                 .thenReturn(Optional.of(product));
 
-        when(cartItemRepository.findByCartIdAndProductId(10L, 20L))
-                .thenReturn(Optional.empty());
+        when(cartItemRepository.findByCartIdAndProductId(
+                10L,
+                20L
+        )).thenReturn(Optional.empty());
 
         CartItem savedItem = new CartItem();
         savedItem.setId(100L);
@@ -90,7 +96,7 @@ class CartServiceTest {
         when(cartItemRepository.save(any(CartItem.class)))
                 .thenReturn(savedItem);
 
-        cartService.addItem(10L, request);
+        cartService.addItem(1L, request);
 
         ArgumentCaptor<CartItem> captor =
                 ArgumentCaptor.forClass(CartItem.class);
@@ -138,19 +144,23 @@ class CartServiceTest {
         request.setProductId(20L);
         request.setQuantity(2);
 
-        when(cartRepository.findById(10L))
-                .thenReturn(Optional.of(cart));
+        when(cartRepository.findByUserIdAndStatus(
+                1L,
+                CartStatus.ACTIVE
+        )).thenReturn(Optional.of(cart));
 
         when(productRepository.findByIdAndActiveTrue(20L))
                 .thenReturn(Optional.of(product));
 
-        when(cartItemRepository.findByCartIdAndProductId(10L, 20L))
-                .thenReturn(Optional.of(existingItem));
+        when(cartItemRepository.findByCartIdAndProductId(
+                10L,
+                20L
+        )).thenReturn(Optional.of(existingItem));
 
         when(cartItemRepository.save(existingItem))
                 .thenReturn(existingItem);
 
-        cartService.addItem(10L, request);
+        cartService.addItem(1L, request);
 
         assertEquals(5, existingItem.getQuantity());
 
@@ -160,13 +170,8 @@ class CartServiceTest {
     @Test
     void testAddItemExceedsStock() {
 
-        User user = new User();
-        user.setId(1L);
-        user.setActive(true);
-
         Cart cart = new Cart();
         cart.setId(10L);
-        cart.setUser(user);
         cart.setStatus(CartStatus.ACTIVE);
 
         Product product = new Product();
@@ -180,21 +185,28 @@ class CartServiceTest {
         request.setProductId(20L);
         request.setQuantity(6);
 
-        when(cartRepository.findById(10L))
-                .thenReturn(Optional.of(cart));
+        when(cartRepository.findByUserIdAndStatus(
+                1L,
+                CartStatus.ACTIVE
+        )).thenReturn(Optional.of(cart));
 
         when(productRepository.findByIdAndActiveTrue(20L))
                 .thenReturn(Optional.of(product));
 
-        when(cartItemRepository.findByCartIdAndProductId(10L, 20L))
-                .thenReturn(Optional.empty());
+        when(cartItemRepository.findByCartIdAndProductId(
+                10L,
+                20L
+        )).thenReturn(Optional.empty());
 
         BusinessException exception = assertThrows(
                 BusinessException.class,
-                () -> cartService.addItem(10L, request)
+                () -> cartService.addItem(1L, request)
         );
 
-        assertEquals("Insufficient stock", exception.getMessage());
+        assertEquals(
+                "Insufficient stock",
+                exception.getMessage()
+        );
     }
 
     @Test
@@ -204,37 +216,43 @@ class CartServiceTest {
         request.setProductId(20L);
         request.setQuantity(2);
 
-        when(cartRepository.findById(999L))
-                .thenReturn(Optional.empty());
+        when(cartRepository.findByUserIdAndStatus(
+                999L,
+                CartStatus.ACTIVE
+        )).thenReturn(Optional.empty());
 
         ResourceNotFoundException exception = assertThrows(
                 ResourceNotFoundException.class,
                 () -> cartService.addItem(999L, request)
         );
 
-        assertEquals("Cart not found", exception.getMessage());
+        assertEquals(
+                "Cart not found",
+                exception.getMessage()
+        );
     }
 
     @Test
     void testAddItemToInactiveCart() {
 
-        Cart cart = new Cart();
-        cart.setId(10L);
-        cart.setStatus(CartStatus.ORDERED);
+        when(cartRepository.findByUserIdAndStatus(
+                1L,
+                CartStatus.ACTIVE
+        )).thenReturn(Optional.empty());
 
         AddCartItemRequest request = new AddCartItemRequest();
         request.setProductId(20L);
         request.setQuantity(2);
 
-        when(cartRepository.findById(10L))
-                .thenReturn(Optional.of(cart));
-
-        BusinessException exception = assertThrows(
-                BusinessException.class,
-                () -> cartService.addItem(10L, request)
+        ResourceNotFoundException exception = assertThrows(
+                ResourceNotFoundException.class,
+                () -> cartService.addItem(1L, request)
         );
 
-        assertEquals("Cart is not active", exception.getMessage());
+        assertEquals(
+                "Cart not found",
+                exception.getMessage()
+        );
     }
 
     @Test
@@ -248,18 +266,23 @@ class CartServiceTest {
         request.setProductId(999L);
         request.setQuantity(2);
 
-        when(cartRepository.findById(10L))
-                .thenReturn(Optional.of(cart));
+        when(cartRepository.findByUserIdAndStatus(
+                1L,
+                CartStatus.ACTIVE
+        )).thenReturn(Optional.of(cart));
 
         when(productRepository.findByIdAndActiveTrue(999L))
                 .thenReturn(Optional.empty());
 
         ResourceNotFoundException exception = assertThrows(
                 ResourceNotFoundException.class,
-                () -> cartService.addItem(10L, request)
+                () -> cartService.addItem(1L, request)
         );
 
-        assertEquals("Product not found", exception.getMessage());
+        assertEquals(
+                "Product not found",
+                exception.getMessage()
+        );
     }
 
     @Test
@@ -280,15 +303,17 @@ class CartServiceTest {
         request.setProductId(20L);
         request.setQuantity(0);
 
-        when(cartRepository.findById(10L))
-                .thenReturn(Optional.of(cart));
+        when(cartRepository.findByUserIdAndStatus(
+                1L,
+                CartStatus.ACTIVE
+        )).thenReturn(Optional.of(cart));
 
         when(productRepository.findByIdAndActiveTrue(20L))
                 .thenReturn(Optional.of(product));
 
         BusinessException exception = assertThrows(
                 BusinessException.class,
-                () -> cartService.addItem(10L, request)
+                () -> cartService.addItem(1L, request)
         );
 
         assertEquals(
@@ -322,21 +347,28 @@ class CartServiceTest {
         request.setProductId(20L);
         request.setQuantity(3);
 
-        when(cartRepository.findById(10L))
-                .thenReturn(Optional.of(cart));
+        when(cartRepository.findByUserIdAndStatus(
+                1L,
+                CartStatus.ACTIVE
+        )).thenReturn(Optional.of(cart));
 
         when(productRepository.findByIdAndActiveTrue(20L))
                 .thenReturn(Optional.of(product));
 
-        when(cartItemRepository.findByCartIdAndProductId(10L, 20L))
-                .thenReturn(Optional.of(existingItem));
+        when(cartItemRepository.findByCartIdAndProductId(
+                10L,
+                20L
+        )).thenReturn(Optional.of(existingItem));
 
         BusinessException exception = assertThrows(
                 BusinessException.class,
-                () -> cartService.addItem(10L, request)
+                () -> cartService.addItem(1L, request)
         );
 
-        assertEquals("Insufficient stock", exception.getMessage());
+        assertEquals(
+                "Insufficient stock",
+                exception.getMessage()
+        );
     }
 
     @Test
@@ -377,7 +409,11 @@ class CartServiceTest {
         when(cartItemRepository.save(cartItem))
                 .thenReturn(cartItem);
 
-        cartService.updateItemQuantity(10L, 100L, request);
+        cartService.updateItemQuantity(
+                10L,
+                100L,
+                request
+        );
 
         assertEquals(5, cartItem.getQuantity());
 
@@ -421,10 +457,17 @@ class CartServiceTest {
 
         BusinessException exception = assertThrows(
                 BusinessException.class,
-                () -> cartService.updateItemQuantity(10L, 100L, request)
+                () -> cartService.updateItemQuantity(
+                        10L,
+                        100L,
+                        request
+                )
         );
 
-        assertEquals("Insufficient stock", exception.getMessage());
+        assertEquals(
+                "Insufficient stock",
+                exception.getMessage()
+        );
     }
 
     @Test
@@ -469,7 +512,11 @@ class CartServiceTest {
 
         BusinessException exception = assertThrows(
                 BusinessException.class,
-                () -> cartService.updateItemQuantity(10L, 100L, request)
+                () -> cartService.updateItemQuantity(
+                        10L,
+                        100L,
+                        request
+                )
         );
 
         assertEquals(
@@ -491,7 +538,11 @@ class CartServiceTest {
 
         ResourceNotFoundException exception = assertThrows(
                 ResourceNotFoundException.class,
-                () -> cartService.updateItemQuantity(999L, 100L, request)
+                () -> cartService.updateItemQuantity(
+                        999L,
+                        100L,
+                        request
+                )
         );
 
         assertEquals(
@@ -522,11 +573,53 @@ class CartServiceTest {
 
         BusinessException exception = assertThrows(
                 BusinessException.class,
-                () -> cartService.updateItemQuantity(10L, 100L, request)
+                () -> cartService.updateItemQuantity(
+                        10L,
+                        100L,
+                        request
+                )
         );
 
         assertEquals(
                 "Cart is not active",
+                exception.getMessage()
+        );
+    }
+
+    @Test
+    void testUpdateItemNotFound() {
+
+        User user = new User();
+        user.setId(1L);
+        user.setActive(true);
+
+        Cart cart = new Cart();
+        cart.setId(10L);
+        cart.setUser(user);
+        cart.setStatus(CartStatus.ACTIVE);
+
+        UpdateCartItemQuantityRequest request =
+                new UpdateCartItemQuantityRequest();
+
+        request.setQuantity(5);
+
+        when(cartRepository.findById(10L))
+                .thenReturn(Optional.of(cart));
+
+        when(cartItemRepository.findById(999L))
+                .thenReturn(Optional.empty());
+
+        ResourceNotFoundException exception = assertThrows(
+                ResourceNotFoundException.class,
+                () -> cartService.updateItemQuantity(
+                        10L,
+                        999L,
+                        request
+                )
+        );
+
+        assertEquals(
+                "Cart item not found",
                 exception.getMessage()
         );
     }
@@ -593,7 +686,10 @@ class CartServiceTest {
 
         BusinessException exception = assertThrows(
                 BusinessException.class,
-                () -> cartService.deleteItem(10L, 100L)
+                () -> cartService.deleteItem(
+                        10L,
+                        100L
+                )
         );
 
         assertEquals(
@@ -610,7 +706,10 @@ class CartServiceTest {
 
         ResourceNotFoundException exception = assertThrows(
                 ResourceNotFoundException.class,
-                () -> cartService.deleteItem(999L, 100L)
+                () -> cartService.deleteItem(
+                        999L,
+                        100L
+                )
         );
 
         assertEquals(
@@ -639,7 +738,10 @@ class CartServiceTest {
 
         ResourceNotFoundException exception = assertThrows(
                 ResourceNotFoundException.class,
-                () -> cartService.deleteItem(10L, 999L)
+                () -> cartService.deleteItem(
+                        10L,
+                        999L
+                )
         );
 
         assertEquals(
@@ -665,7 +767,10 @@ class CartServiceTest {
 
         BusinessException exception = assertThrows(
                 BusinessException.class,
-                () -> cartService.deleteItem(10L, 100L)
+                () -> cartService.deleteItem(
+                        10L,
+                        100L
+                )
         );
 
         assertEquals(
@@ -701,9 +806,9 @@ class CartServiceTest {
 
         verify(cartItemRepository).delete(cartItem);
 
-        org.mockito.Mockito.verify(
+        verify(
                 cartRepository,
-                org.mockito.Mockito.never()
+                never()
         ).delete(cart);
     }
 
@@ -730,21 +835,22 @@ class CartServiceTest {
         when(cartRepository.save(any(Cart.class)))
                 .thenReturn(savedCart);
 
-        CartResponse response = new CartResponse();
-        response.setId(10L);
-        response.setUserId(1L);
-        response.setStatus(CartStatus.ACTIVE);
-        response.setTotalAmount(BigDecimal.ZERO);
-
         when(cartItemRepository.findByCartId(10L))
-                .thenReturn(java.util.Collections.emptyList());
+                .thenReturn(List.of());
 
-        CartResponse result = cartService.getOrCreateCart(1L);
+        CartResponse result =
+                cartService.getOrCreateCart(1L);
 
         assertEquals(10L, result.getId());
         assertEquals(1L, result.getUserId());
-        assertEquals(CartStatus.ACTIVE, result.getStatus());
-        assertEquals(BigDecimal.ZERO, result.getTotalAmount());
+        assertEquals(
+                CartStatus.ACTIVE,
+                result.getStatus()
+        );
+        assertEquals(
+                BigDecimal.ZERO,
+                result.getTotalAmount()
+        );
 
         verify(cartRepository).save(any(Cart.class));
     }
@@ -770,81 +876,51 @@ class CartServiceTest {
         )).thenReturn(Optional.of(existingCart));
 
         when(cartItemRepository.findByCartId(10L))
-                .thenReturn(java.util.Collections.emptyList());
+                .thenReturn(List.of());
 
-        CartResponse result = cartService.getOrCreateCart(1L);
+        CartResponse result =
+                cartService.getOrCreateCart(1L);
 
         assertEquals(10L, result.getId());
         assertEquals(1L, result.getUserId());
-        assertEquals(CartStatus.ACTIVE, result.getStatus());
-        assertEquals(BigDecimal.ZERO, result.getTotalAmount());
+        assertEquals(
+                CartStatus.ACTIVE,
+                result.getStatus()
+        );
+        assertEquals(
+                BigDecimal.ZERO,
+                result.getTotalAmount()
+        );
 
-        verify(cartRepository, org.mockito.Mockito.never())
-                .save(any(Cart.class));
+        verify(
+                cartRepository,
+                never()
+        ).save(any(Cart.class));
     }
 
     @Test
-    void testAddInactiveProduct() {
+    void testGetOrCreateCartUserNotFound() {
 
-        Cart cart = new Cart();
-        cart.setId(10L);
-        cart.setStatus(CartStatus.ACTIVE);
-
-        AddCartItemRequest request = new AddCartItemRequest();
-        request.setProductId(20L);
-        request.setQuantity(2);
-
-        when(cartRepository.findById(10L))
-                .thenReturn(Optional.of(cart));
-
-        when(productRepository.findByIdAndActiveTrue(20L))
+        when(userRepository.findByIdAndActiveTrue(999L))
                 .thenReturn(Optional.empty());
 
         ResourceNotFoundException exception = assertThrows(
                 ResourceNotFoundException.class,
-                () -> cartService.addItem(10L, request)
+                () -> cartService.getOrCreateCart(999L)
         );
 
         assertEquals(
-                "Product not found",
+                "User not found",
                 exception.getMessage()
         );
 
-        verify(cartItemRepository,
-                org.mockito.Mockito.never())
-                .save(any(CartItem.class));
-    }
-
-    @Test
-    void testAddNonExistingProductDoesNotSaveItem() {
-
-        Cart cart = new Cart();
-        cart.setId(10L);
-        cart.setStatus(CartStatus.ACTIVE);
-
-        AddCartItemRequest request = new AddCartItemRequest();
-        request.setProductId(999L);
-        request.setQuantity(2);
-
-        when(cartRepository.findById(10L))
-                .thenReturn(Optional.of(cart));
-
-        when(productRepository.findByIdAndActiveTrue(999L))
-                .thenReturn(Optional.empty());
-
-        ResourceNotFoundException exception = assertThrows(
-                ResourceNotFoundException.class,
-                () -> cartService.addItem(10L, request)
+        verify(
+                cartRepository,
+                never()
+        ).findByUserIdAndStatus(
+                any(Long.class),
+                any(CartStatus.class)
         );
-
-        assertEquals(
-                "Product not found",
-                exception.getMessage()
-        );
-
-        verify(cartItemRepository,
-                org.mockito.Mockito.never())
-                .save(any(CartItem.class));
     }
 
     @Test
@@ -890,17 +966,22 @@ class CartServiceTest {
         )).thenReturn(Optional.of(cart));
 
         when(cartItemRepository.findByCartId(10L))
-                .thenReturn(java.util.List.of(item1, item2));
+                .thenReturn(List.of(item1, item2));
 
-        CartResponse result = cartService.getOrCreateCart(1L);
+        CartResponse result =
+                cartService.getOrCreateCart(1L);
 
         assertEquals(
                 new BigDecimal("350"),
                 result.getTotalAmount()
         );
 
-        assertEquals(2, result.getItems().size());
+        assertEquals(
+                2,
+                result.getItems().size()
+        );
 
-        verify(cartItemRepository).findByCartId(10L);
+        verify(cartItemRepository)
+                .findByCartId(10L);
     }
 }
